# korda-tools

./: .gitignore  AGENTS.md  CHANGELOG.md  CODEOWNERS  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 0001_create_tools.sql  0002_create_settings.sql  0003_create_tool_run_logs.sql  0004_create_credentials.sql  0005_create_migrations_table.sql  0006_create_workflows.sql  0007_create_workflow_runs.sql  0008_create_workflow_node_runs.sql  0009_create_schedules.sql  0010_create_scheduled_run_logs.sql  0011_create_chat_threads.sql  0012_create_custom_tool_library.sql  0013_harden_custom_tool_library.sql  0014_create_help_center.sql  0015_create_governance_core.sql  0016_create_deliverables.sql  0017_harden_audit_chain.sql  0018_create_sheet_knowledge_tables.sql  0019_create_policy_controls.sql  0020_add_ai_review_fields.sql  0021_create_ingest_supervisor.sql  0022_reconcile_ingest_supervisor_schema.sql
src-tauri/scripts/: sophon_ingest_worker.py  sophon_runtime_worker.py
src-tauri/scripts/tests/: test_sophon_ingest_worker.py  test_sophon_runtime_worker_enumeration.py
src-tauri/src/: custom_library.rs  execution_gateway.rs  ingest.rs  lib.rs  object_store.rs  platform.rs  secrets.rs  sophon_runtime.rs
src-tauri/src/help/: commands.rs  db.rs  error.rs  mod.rs
src-tauri/src/help/content/: developer.md  introduction.md  quick-start.md  tools-library.md  troubleshooting.md  (+1 more)
src-tauri/src/tools/: commands.rs  db.rs  error.rs  mod.rs  storage.rs  zip.rs
(+408 files in other folders)
