[package]
name = "app"
version = "0.1.0"
description = "Desktop workspace for Korda Tools and Sophon operations."
authors = ["Matt Harrington"]
license = "UNLICENSED"
repository = "https://github.com/Matt-Harrington1650/korda-tools.git"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2.3.2", features = ["sqlite"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
base64 = "0.22"
sha2 = "0.10"
uuid = { version = "1.18", features = ["v4", "serde"] }
sqlx = { version = "0.8.6", default-features = false, features = ["sqlite", "runtime-tokio"] }
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls"] }

